# sparv-sbx-ocr-correction-viklofg-sweocr

./: .bumpversion.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: check.yml  release.yml  rolling.yml  test.yml
src/sbx_ocr_correction_viklofg_sweocr/: __init__.py  annotations.py  metadata.yaml  ocr_corrector.py
tests/: conftest.py  test_annotations.py  test_ocr_suggestor.py
tests/__snapshots__/: test_annotations.ambr  test_ocr_suggestor.ambr
