[project]
name = "sparv-sbx-ocr-correction-viklofg-sweocr"
version = "0.5.1"
description = "A sparv plugin for computing suggested OCR improvements."
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "parallel-corpus>=0.2.0",
    "sparv>=5.3.1",
    "transformers>=4.40.0,<4.45.0", # Code behave strange with transformers==4.45, see https://github.com/spraakbanken/sparv-sbx-ocr-correction/issues/52
]
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3.13", TODO waiting for update of transformers
    "Programming Language :: Python :: Implementation :: CPython",
    # "uncomment if you test on these interpreters:",
    # "Programming Language :: Python :: Implementation :: IronPython",
    # "Programming Language :: Python :: Implementation :: Jython",
    # "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[project.urls]
Homepage = "https://spraakbanken.gu.se"
Repository = "https://github.com/spraakbanken/sparv-sbx-ocr-correction"
Issues = "https://github.com/spraakbanken/sparv-sbx-ocr-correction/issues"
Changelog = "https://github.com/spraakbanken/sparv-sbx-ocr-correction/blob/main/CHANGELOG.md"

[project.entry-points."sparv.plugin"]
sbx_ocr_correction_viklofg_sweocr = "sbx_ocr_correction_viklofg_sweocr"

[dependency-groups]
dev = [
    "mypy>=1.12.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "sparv-testing",
    "syrupy>=4.7.2",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"



[tool.uv.build-backend]
module-name = "sbx_ocr_correction_viklofg_sweocr"
source-exclude = ["/.github", "/docs"]

[tool.uv.sources]
sparv-testing = { git = "https://github.com/spraakbanken/sparv-testing", rev = "v0.2.0" }

[tool.pytest.ini_options]
# log_cli = true
# log_cli_level = "WARNING"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
